tests/lexer/tinvalidintegerliteral1.nim
discard """
  errormsg: "invalid number"
  file: "tinvalidintegerliteral1.nim"
  line: 7
"""

echo 0b
